Version 11.10.2 - 18 August 2008

- reakky fix another focus bug (#42750)

Version 11.10.1 - 18 August 2008

- fix another focus bug (#42750)

Version 11.10 - 14 August 2008

- diskdrake:
  o refreshed GUI
- localedrake:
  o default to UTF-8 for chinese simplified (#42137)

Version 11.6 - 8 August 2008

- add product type to URL when fetching mirror list
- enable to share code between draksnapshot, mdkonline & net_applet

Version 11.5 - 6 August 2008

- fix more strange focus bugs

Version 11.4 - 5 August 2008

- fix strange focus bugs

Version 11.3 - 4 August 2008

- drakedm:
  o adapt to dm.d files being moved to /usr/share (#41879)
  o do not try to configure an undefined dm

Version 10.47 - 10 July 2008

- fix reading and setting kdmrc (by resolving alternative in chroot)

Version 10.46 - 10 July 2008

- authentication:
  o add back fix to force the password to be utf8 (#23273)
  o fix reading md5/shadow options in /etc/pam.d/system-auth
- finish-install: log in syslog

Version 10.45 - 09 July 2008

- update autologin file path for kdm4
- default to KDE4 (instead of KDE) if kdm config exists when reading
  autologin configuration
- change default authentication to local (instead of ldap)

Version 10.43 - 04 July 2008

- detect KDE4 when configuring autologin

Version 10.39 - 25 June 2008

- bootloader-config:
  o fix handling xen kernels: it should not replace an existing 'linux'
    entry (#40865)
- service_harddrake:
  o handle nvidia173.ko (new legacy series of the proprietary driver)

Version 10.37 - 18 June 2008

- handle jpeg icons (needed for next rpmdrake)
- draksound:
  o do not set snd-ac97-codec's "power_save=1" options on MIPS

Version 10.34 - 12 June 2008

- partitioning wizard:
  o do not propose to resize "hidden" fat partitions
  o do not say "the Windows partition" when there can be more than one
- allow mounting ntfs-3g partitions
  (also fixes detection of Windows partitions during live installation)
- service_harddrake: