@@ -1,3 +1,5 @@
+- do_pkgs: do not reload urpmi media at every check for package availability
+
 Version 11.10.2 - 18 August 2008
 
 - reakky fix another focus bug (#42750)
